@@ -631,8 +631,8 @@ output.redis:
   # password is set.
   password: "my_password"
 
-  # Optional index name. The default is {beatname_lc} and generates {beatname_lc} keys.
-  index: "{beatname_lc}"
+  # Optional key name. The default is {beatname_lc}
+  key: "{beatname_lc}"
 
   # Optional Redis database number where the events are stored
   # The default is 0.
@@ -667,6 +667,13 @@ don't specify a port number, the value configured by `port` is used.
 The Redis port to use if `hosts` does not contain a port number. The default is 6379.
 
 ===== index
+
+deprecated[5.0.0-alpha5,The `index` setting is renamed to `key.]
+
+The name of the Redis list or channel the events are published to. The default is
+"{beatname_lc}".
+
+===== key
 
 The name of the Redis list or channel the events are published to. The default is
 "{beatname_lc}".
