@@ -496,7 +496,7 @@ output.elasticsearch:
 
   # The name of the Redis list or channel the events are published to. The
   # default is metricbeat.
-  #index: metricbeat
+  #key: metricbeat
 
   # The password to authenticate with. The default is no authentication.
   #password:
