@@ -769,7 +769,7 @@ output.elasticsearch:
 
   # The name of the Redis list or channel the events are published to. The
   # default is packetbeat.
-  #index: packetbeat
+  #key: packetbeat
 
   # The password to authenticate with. The default is no authentication.
   #password:
