@@ -386,7 +386,7 @@ output.elasticsearch:
 
   # The name of the Redis list or channel the events are published to. The
   # default is winlogbeat.
-  #index: winlogbeat
+  #key: winlogbeat
 
   # The password to authenticate with. The default is no authentication.
   #password:
